--- a/resources/private/html/admin/login.html
+++ b/resources/private/html/admin/login.html
@@ -33,10 +33,10 @@
   <div class="max-w-md w-full space-y-8">
     <div>
       <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-        Sidekick.js
+        {{body.title}}
       </h2>
     </div>
-    <form class="mt-8 space-y-6" action="#" method="POST">
+    <form class="mt-8 space-y-6" action="" method="POST">
       <div class="rounded-md shadow-sm -space-y-px">
         <div>
           <label for="password" class="sr-only">Password</label>
