add page partials

--- a/resources/private/html/admin/backend.html
+++ b/resources/private/html/admin/backend.html
@@ -36,6 +36,7 @@
           <div class="py-4">
             {{#body.page.dashboard}}
               {{> dashboard}}
+              HELLO
             {{/body.page.dashboard}}
 
             {{#body.page.users}}
