--- a/resources/private/html/admin/backend.html
+++ b/resources/private/html/admin/backend.html
@@ -29,10 +29,13 @@
       <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none" tabindex="0">
       <div class="py-6">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-          <h1 class="text-2xl font-semibold text-gray-900">Dashboard</h1>
+          <h1 class="text-2xl font-semibold text-gray-900">{{! Some Top Level Text Here}}</h1>
         </div>
         <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
           <!-- Replace with your content -->
+          {{#navigation}}
+            {{> navigation.tabs}}
+          {{/navigation}}
           <div class="py-4">
             {{#page.dashboard}}
               {{> backend.dashboard}}
