add extensions and graphql page

--- a/resources/private/html/admin/backend.html
+++ b/resources/private/html/admin/backend.html
@@ -69,6 +69,14 @@
               {{> backend.logs}}
             {{/page.logs}}
 
+            {{#page.graphql}}
+              {{> backend.graphql}}
+            {{/page.graphql}}
+
+            {{#page.extensions}}
+              {{> backend.extensions}}
+            {{/page.extensions}}
+
           </div>
           <!-- /End replace -->
         </div>
