render sidekick admin custom pages

--- a/resources/private/html/admin/backend.html
+++ b/resources/private/html/admin/backend.html
@@ -6,7 +6,7 @@
     <body class="">
 
       <!-- This example requires Tailwind CSS v2.0+ -->
-      <div class="h-screen flex overflow-hidden bg-white"
+      <div class="flex h-screen overflow-hidden bg-white"
           x-data="{sidebarOpen: false}">
 
       <div x-show="sidebarOpen">
@@ -14,24 +14,24 @@
       </div>
       {{> sidebar.desktop}}
 
-      <div class="flex flex-col w-0 flex-1 overflow-hidden">
-      <div class="md:hidden pl-1 pt-1 sm:pl-3 sm:pt-3">
+      <div class="flex flex-col flex-1 w-0 overflow-hidden">
+      <div class="pt-1 pl-1 md:hidden sm:pl-3 sm:pt-3">
       <button class="-ml-0.5 -mt-0.5 h-12 w-12 inline-flex items-center justify-center rounded-md text-gray-500 hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
               @click="sidebarOpen = true"
               >
         <span class="sr-only">Open sidebar</span>
         <!-- Heroicon name: menu -->
-        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
         </svg>
       </button>
       </div>
-      <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none" tabindex="0">
+      <main class="relative z-0 flex-1 overflow-y-auto focus:outline-none" tabindex="0">
       <div class="py-6">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+        <div class="px-4 mx-auto max-w-7xl sm:px-6 md:px-8">
           <h1 class="text-2xl font-semibold text-gray-900">{{! Some Top Level Text Here}}</h1>
         </div>
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+        <div class="px-4 mx-auto max-w-7xl sm:px-6 md:px-8">
           <!-- Replace with your content -->
           {{#navigation}}
             {{> navigation.tabs}}
@@ -76,6 +76,10 @@
             {{#page.extensions}}
               {{> backend.extensions}}
             {{/page.extensions}}
+
+            {{#page.customPage}}
+              {{> (lookup . 'customPartial') }}
+            {{/page.customPage}}
 
           </div>
           <!-- /End replace -->
