include context to dynamic partials

--- a/resources/private/html/admin/backend.html
+++ b/resources/private/html/admin/backend.html
@@ -78,7 +78,7 @@
             {{/page.extensions}}
 
             {{#page.customPage}}
-              {{> (lookup . 'customPartial') }}
+              {{> (lookup . 'customPartial') @root}}
             {{/page.customPage}}
 
           </div>
